border radius fix, and lighter scrollbar background

--- a/src/app/root.less
+++ b/src/app/root.less
@@ -28,7 +28,7 @@
 
     // scrollbar colors
     // --scrollbar-background-color: rgba(21, 23, 21, 1);
-    --scrollbar-background-color: #171717;
+    --scrollbar-background-color: #030303;
     --scrollbar-thumb-color: #333;
     --scrollbar-thumb-hover-color: rgb(211, 215, 207);
 
